# kt-aivle-big-proj-data-preprocessing

./: .gitignore  LICENSE  README.md  _dbg_err.txt  데이터_전처리_v3.6_전체구현계획.md  데이터_전처리_v3.7_전체구현계획.md  데이터_전처리_v3.8_전체구현계획.md  데이터_전처리_v3.9_전체구현계획.md  데이터_전처리_v4.0_전체구현계획.md  데이터_전처리_v4.1_전체구현계획.md  폴더_구성.md
battery_v3_6_preprocessor/: README.md  V3.6_계획_코드_충돌검사.md  prepare_training_view.py  pyproject.toml  run_dryrun_keepawake.ps1  run_execute_keepawake.ps1
battery_v3_6_preprocessor/battery_v3_6/: __init__.py  cli.py  ct_area.py  geometry.py  models.py  output.py  pipeline.py  reports.py  scan.py  selection.py  training_view.py
battery_v3_6_preprocessor/tests/: test_cli.py  test_core.py  test_ct_area.py  test_metrics.py  test_output.py  test_reports.py  test_scan.py  test_selection.py  test_training_view.py
battery_v3_7_preprocessor/: README.md  prepare_training_view.py  pyproject.toml  run_dryrun_keepawake.ps1  run_execute_keepawake.ps1  status_heartbeat.ps1
battery_v3_7_preprocessor/battery_v3_7/: __init__.py  cli.py  ct_area.py  output.py  pipeline.py  reports.py  selection.py  training_view.py
battery_v3_7_preprocessor/tests/: test_cli.py  test_core.py  test_ct_area.py  test_metrics.py  test_output.py  test_pipeline.py  test_reports.py  test_scan.py  test_selection.py  test_training_view.py
battery_v3_9_preprocessor/: README.md  prepare_training_view.py  pyproject.toml  run_execute_keepawake.ps1  run_pipeline.ps1
battery_v3_9_preprocessor/battery_v3_9/: __init__.py  cli.py  ct_area.py  output.py  reports.py  selection.py  training_view.py
battery_v3_9_preprocessor/tests/: test_cli.py  test_core.py  test_ct_area.py  test_metrics.py  test_output.py  test_pipeline.py  test_reports.py  test_scan.py  test_selection.py  test_training_view.py
battery_v3_9_preprocessor/tools/: verify_ct_selection.py
battery_v4_0_preprocessor/: README.md  prepare_training_view.py  pyproject.toml  run_pipeline.ps1
battery_v4_0_preprocessor/battery_v4_0/: __init__.py  cli.py  ct_area.py  deterministic.py  metrics.py  output.py  parsing.py  pipeline.py  reports.py  selection.py  training_view.py
battery_v4_0_preprocessor/tests/: test_cli.py  test_core.py  test_ct_area.py  test_metrics.py  test_output.py  test_pipeline.py  test_reports.py  test_scan.py  test_selection.py  test_training_view.py
battery_v4_0_preprocessor/tools/: verify_ct_selection.py
battery_v4_1_preprocessor/: README.md  prepare_training_view.py  pyproject.toml  run_dryrun_keepawake.ps1  run_execute_keepawake.ps1  run_pipeline.ps1
(+47 files in other folders)
