[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-v3.6-preprocessor"
version = "3.6.0"
description = "Deterministic AIHub battery dataset preprocessor with CT area stratification"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Pillow==12.2.0",
  "shapely==2.1.2",
]

[project.scripts]
"battery-v3.6" = "battery_v3_6.cli:main"

[tool.setuptools]
packages = ["battery_v3_6"]

