[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-v3.9-preprocessor"
version = "3.7.0"
description = "Deterministic AIHub battery preprocessor with CT >=25% pre-split exclusion"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Pillow==12.2.0",
  "shapely==2.1.2",
]

[project.scripts]
"battery-v3.9" = "battery_v3_9.cli:main"

[tool.setuptools]
packages = ["battery_v3_9"]

