[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-v4.1-preprocessor"
version = "4.1.0"
description = "Deterministic AIHub battery preprocessor preserving all CT IDs after image filtering"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Pillow==12.2.0",
  "shapely==2.1.2",
]

[project.scripts]
"battery-v4.1" = "battery_v4_1.cli:main"

[tool.setuptools]
packages = ["battery_v4_1"]
